[gd_scene load_steps=2 format=3 uid="uid://b30vvmrd25g1c"]

[ext_resource type="Script" path="res://Scripts/level_selector.gd" id="1_lif4n"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_lif4n")

[node name="Town" type="Button" parent="Control"]
layout_mode = 0
offset_left = 129.0
offset_top = 68.0
offset_right = 250.0
offset_bottom = 191.0
text = "Town"

[node name="City" type="Button" parent="Control"]
layout_mode = 0
offset_left = 322.0
offset_top = 65.0
offset_right = 443.0
offset_bottom = 188.0
text = "City"

[node name="Planet" type="Button" parent="Control"]
layout_mode = 0
offset_left = 517.0
offset_top = 68.0
offset_right = 638.0
offset_bottom = 191.0
text = "Planet"

[node name="Galaxy" type="Button" parent="Control"]
layout_mode = 0
offset_left = 705.0
offset_top = 67.0
offset_right = 826.0
offset_bottom = 190.0
text = "Galaxy"

[node name="Universe" type="Button" parent="Control"]
layout_mode = 0
offset_left = 897.0
offset_top = 70.0
offset_right = 1018.0
offset_bottom = 193.0
text = "Universe"

[node name="BackToMainMenu" type="Button" parent="Control"]
layout_mode = 0
offset_left = 529.0
offset_top = 495.0
offset_right = 681.0
offset_bottom = 572.0
text = "Back"

[connection signal="pressed" from="Control/Town" to="Control" method="_on_town_pressed"]
[connection signal="pressed" from="Control/City" to="Control" method="_on_city_pressed"]
[connection signal="pressed" from="Control/Planet" to="Control" method="_on_planet_pressed"]
[connection signal="pressed" from="Control/Galaxy" to="Control" method="_on_galaxy_pressed"]
[connection signal="pressed" from="Control/Universe" to="Control" method="_on_universe_pressed"]
[connection signal="pressed" from="Control/BackToMainMenu" to="Control" method="_on_back_to_main_menu_pressed"]
